--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -42,7 +42,7 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Build Dist
-        run: gradle cosec-gateway:installDist
+        run: gradle cosec-gateway-server:installDist
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -80,7 +80,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           platforms: linux/amd64,linux/arm64
-          context: cosec-gateway
+          context: cosec-gateway-server
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
