--- a/cosec-gateway-server/Dockerfile
+++ b/cosec-gateway-server/Dockerfile
@@ -1,6 +1,6 @@
 # docker run --name cosec-gateway-server -d -p 8080:8080 --link redis -e SPRING_REDIS_URL=redis://redis:6379 ahoowang/cosec-gateway-server:0.8.0
 
-ARG APP_NAME=cosec-gateway
+ARG APP_NAME=cosec-gateway-server
 ARG WORK_HOME=/opt/${APP_NAME}
 
 FROM openjdk:17.0.2-jdk-slim AS base
