--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 #
 group=me.ahoo.cosec
 version=1.0.2
-description=RBAC-based And Policy-based Multi-Tenant Security Framework
+description=RBAC-based And Policy-based Multi-Tenant Reactive Security Framework
 website=https://github.com/Ahoo-Wang/CoSec
 issues=https://github.com/Ahoo-Wang/CoSec/issues
 vcs=https://github.com/Ahoo-Wang/CoSec.git
