--- a/cosec-gateway-server/src/main/resources/application.yaml
+++ b/cosec-gateway-server/src/main/resources/application.yaml
@@ -34,13 +34,8 @@ cosid:
     enabled: true
     distributor:
       type: redis
-  snowflake:
+  generator:
     enabled: true
-    share:
-      clock-sync: true
-      friendly: true
-      converter:
-        type: radix
 
 cosec:
   authentication:
