feat: support `TracingAuthorization`

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@
 # limitations under the License.
 #
 group=me.ahoo.cosec
-version=1.16.15
-description=RBAC-based And Policy-based Multi-Tenant Reactive Security Framework
+version=1.16.16
+description=RBAC-based And Policy-based Multi-Tenant Reactive Security Framework.
 website=https://github.com/Ahoo-Wang/CoSec
 issues=https://github.com/Ahoo-Wang/CoSec/issues
 vcs=https://github.com/Ahoo-Wang/CoSec.git
