--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -27,6 +27,8 @@ style:
     excludeImports:
       - java.util.*
       - org.hamcrest.Matchers.*
+      - org.hamcrest.MatcherAssert.*
+      - org.junit.jupiter.api.Assertions.*
 naming:
   MemberNameEqualsClassName:
     active: false
@@ -45,7 +47,7 @@ performance:
     active: false
 formatting:
   NoWildcardImports:
-    packagesToUseImportOnDemandProperty: "java.util.*,org.hamcrest.Matchers.*"
+    packagesToUseImportOnDemandProperty: "java.util.*,org.hamcrest.Matchers.*,org.hamcrest.MatcherAssert.*,org.junit.jupiter.api.Assertions.*"
   MaximumLineLength:
     active: false
   Filename:
