--- a/cosec-gateway-server/src/main/resources/application.yaml
+++ b/cosec-gateway-server/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 server:
   port: 8080
   error:
-    include-message: always
-    include-binding-errors: always
+    whitelabel:
+      enabled: false
 spring:
   cloud:
     gateway:
