--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -30,7 +30,7 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Test CoSec-Core
-        run: gradle cosec-core:clean cosec-core:check
+        run: ./gradlew cosec-core:clean cosec-core:check
 
   cosec-jwt-test:
     name: CoSec Jwt Test
@@ -49,7 +49,7 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Test CoSec-Jwt
-        run: gradle cosec-jwt:clean cosec-jwt:check
+        run: ./gradlew cosec-jwt:clean cosec-jwt:check
 
   cosec-oauth-test:
     name: CoSec OAuth Test
@@ -78,7 +78,7 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Test CoSec-OAuth
-        run: gradle cosec-oauth:clean cosec-oauth:check
+        run: ./gradlew cosec-oauth:clean cosec-oauth:check
 
   cosec-redis-test:
     name: CoSec Redis Test
@@ -107,7 +107,7 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Test CoSec-Redis
-        run: gradle cosec-redis:clean cosec-redis:check
+        run: ./gradlew cosec-redis:clean cosec-redis:check
 
   cosec-webflux-test:
     name: CoSec WebFlux Test
@@ -126,7 +126,7 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Test CoSec-WebFlux
-        run: gradle cosec-webflux:clean cosec-webflux:check
+        run: ./gradlew cosec-webflux:clean cosec-webflux:check
 
   cosec-webmvc-test:
     name: CoSec WebMvc Test
@@ -145,7 +145,7 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Test CoSec-WebMvc
-        run: gradle cosec-webmvc:clean cosec-webmvc:check
+        run: ./gradlew cosec-webmvc:clean cosec-webmvc:check
 
   cosec-spring-boot-starter-test:
     name: CoSec Spring Boot Starter Test
@@ -174,4 +174,4 @@ jobs:
           settings-path: ${{ github.workspace }}
 
       - name: Test CoSec-Spring-Boot-Starter
-        run: gradle cosec-spring-boot-starter:clean cosec-spring-boot-starter:check
+        run: ./gradlew cosec-spring-boot-starter:clean cosec-spring-boot-starter:check
