feat: support `LocalPolicyInitializer`

--- a/cosec-gateway-server/src/main/resources/application.yaml
+++ b/cosec-gateway-server/src/main/resources/application.yaml
@@ -40,7 +40,7 @@ cosec:
   authorization:
     local-policy:
       enabled: true
-      paths: classpath:build-in-policy
+      init-repository: true
 logging:
   level:
     root: info
