--- a/k8s/cosec-gateway-config.yaml
+++ b/k8s/cosec-gateway-config.yaml
@@ -10,10 +10,62 @@ data:
       application:
         name: ${service.name:cosec-gateway}
   application.yaml: |-
+    management:
+      endpoint:
+        health:
+          show-details: always
+
     server:
+      port: 8080
       error:
         whitelabel:
           enabled: false
+    spring:
+      cloud:
+        gateway:
+          httpclient:
+            pool:
+              max-idle-time: 60S
+          globalcors:
+            corsConfigurations:
+              '[/**]':
+                allowedOrigins: "*"
+                allowedMethods: "*"
+                allowedHeaders: "*"
+                maxAge: 1800000
+          default-filters:
+            - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+          routes:
+            - id: iam-service
+              uri: http://iam-service
+              predicates:
+                - Path=/iam/**
+              filters:
+                - StripPrefix=1
+
+
+    cosid:
+      namespace: ${spring.application.name}
+      machine:
+        enabled: true
+        distributor:
+          type: redis
+      generator:
+        enabled: true
+        namespace: saas
+
     cosec:
       authentication:
         enabled: false
+      jwt:
+        algorithm: hmac256
+        secret: ouoD7zTMwBqY5d5BKowOKz9__Q6z9__Q
+      ip2region:
+        enabled: false
+      authorization:
+        cache:
+          key-prefix: saas
+    logging:
+      level:
+        root: info
+        me.ahoo.cosec.authorization.SimpleAuthorization: debug
