build: update Gradle plugins and remove '.plugin' suffix
- Remove '.plugin' suffix from Gradle plugin references in build.gradle.kts
- Update plugin references in gradle/libs.versions.toml
- This change simplifies the plugin notation and improves readability

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,6 +45,6 @@ dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-spring = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
-publish-plugin = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "publish-plugin" }
-jmh-plugin = { id = "me.champeau.jmh", version.ref = "jmh-plugin" }
+publish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "publish-plugin" }
+jmh = { id = "me.champeau.jmh", version.ref = "jmh-plugin" }
 
