--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,5 +1,9 @@
 name: Codecov
 on:
+  push:
+    paths-ignore:
+      - 'document/**'
+      - 'cosec-gateway-server/**'
   pull_request:
     paths-ignore:
       - 'document/**'
