ci: adjust workflow trigger events
- Remove 'push' event from integration test workflow
- Keep only 'pull_request' event to trigger tests

Signed-off-by: Ahoo Wang <ahoowang@qq.com>

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -12,7 +12,7 @@
 #
 
 name: Integration Test
-on: [ push, pull_request ]
+on: [ pull_request ]
 jobs:
   cosec-core-test:
     name: CoSec Core Test
