build(cosec-gateway-server): update dependencies and configure WebFlux- Replace spring-cloud-starter-gateway with spring-cloud-starter-gateway-server-webflux - Remove spring-cloud-starter-openfeign dependency - Update application.yaml to use server.webflux global CORS configuration
Signed-off-by: Ahoo Wang <ahoowang@qq.com>

--- a/cosec-gateway-server/src/main/resources/application.yaml
+++ b/cosec-gateway-server/src/main/resources/application.yaml
@@ -6,29 +6,30 @@ server:
 spring:
   cloud:
     gateway:
-      globalcors:
-        corsConfigurations:
-          '[/**]':
-            allowedOrigins: "*"
-            allowedMethods: "*"
-            allowedHeaders: "*"
-            maxAge: 1800000
-      default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
-      routes:
-        - id: cosec-auth
-          uri: lb://cosec-auth
-          predicates:
-            - Path=/cosec-auth/**
-          filters:
-            - StripPrefix=1
-        - id: google
-          uri: https://www.google.com
-          predicates:
-            - Path=/google/**
-          filters:
-            - StripPrefix=1
-
+      server:
+        webflux:
+          globalcors:
+            cors-configurations:
+              '[/**]':
+                allowedOrigins: "*"
+                allowedMethods: "*"
+                allowedHeaders: "*"
+                maxAge: 1800000
+          default-filters:
+            - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+          routes:
+            - id: cosec-auth
+              uri: lb://cosec-auth
+              predicates:
+                - Path=/cosec-auth/**
+              filters:
+                - StripPrefix=1
+            - id: google
+              uri: https://www.google.com
+              predicates:
+                - Path=/google/**
+              filters:
+                - StripPrefix=1
 cosec:
   authentication:
     enabled: false
