config(cosec-gateway): update CORS configuration and route settings
- Update CORS configuration to use hyphenated property names
- Add exposed-headers property to CORS configuration
- Reduce indentation and improve formatting in application.yaml
- Update route configuration to use lb:// protocol for service discovery
- Enable local policy and initialize repository in authorization settings
- Add caching configuration for policy and role
- Remove unnecessary cosid and management sections

Signed-off-by: Ahoo Wang <ahoowang@qq.com>

--- a/cosec-gateway-server/src/main/resources/application.yaml
+++ b/cosec-gateway-server/src/main/resources/application.yaml
@@ -11,10 +11,11 @@ spring:
           globalcors:
             cors-configurations:
               '[/**]':
-                allowedOrigins: "*"
-                allowedMethods: "*"
-                allowedHeaders: "*"
-                maxAge: 1800000
+                allowed-origins: "*"
+                allowed-methods: "*"
+                allowed-headers: "*"
+                exposed-headers: "*"
+                max-age: 1800000
           default-filters:
             - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
           routes:
