--- a/cosec-gateway-server/src/main/resources/application.yaml
+++ b/cosec-gateway-server/src/main/resources/application.yaml
@@ -3,6 +3,9 @@ server:
   error:
     whitelabel:
       enabled: false
+  compression:
+    enabled: true
+    min-response-size: 1KB
 spring:
   cloud:
     gateway:
