fix(config): adjust error whitelabel configuration path
- Moved error whitelabel config under spring.web.error in application.yaml
- Updated k8s config to match new configuration structure
- Ensured compression settings remain consistent across environments

Signed-off-by: Ahoo Wang <ahoowang@qq.com>

--- a/cosec-gateway-server/src/main/resources/application.yaml
+++ b/cosec-gateway-server/src/main/resources/application.yaml
@@ -1,12 +1,13 @@
 server:
   port: 8080
-  error:
-    whitelabel:
-      enabled: false
   compression:
     enabled: true
     min-response-size: 1KB
 spring:
+  web:
+    error:
+      whitelabel:
+        enabled: false
   cloud:
     gateway:
       server:
