--- a/k8s/cosec-gateway-config.yaml
+++ b/k8s/cosec-gateway-config.yaml
@@ -12,10 +12,14 @@ data:
   application.yaml: |-
     server:
       port: 8080
-      error:
-        whitelabel:
-          enabled: false
+      compression:
+        enabled: true
+        min-response-size: 1KB
     spring:
+      web:
+        error:
+          whitelabel:
+            enabled: false
       cloud:
         gateway:
           server:
