config(gateway): add IPv4 preference setting for Netty compatibility
- Added JAVA_OPTS environment variable with preferIPv4Stack option
- Referenced Netty issue #16082 for IPv4 stack preference
- Updated container image configuration to include Java options
- Maintained existing startup probe and health check settings

Signed-off-by: Ahoo Wang <ahoowang@qq.com>

--- a/k8s/cosec-gateway-deployment.yml
+++ b/k8s/cosec-gateway-deployment.yml
@@ -38,6 +38,9 @@ spec:
               value: "30s"
             - name: TZ
               value: Asia/Shanghai
+            - name: JAVA_OPTS
+              # https://github.com/netty/netty/issues/16082
+              value: -Djava.net.preferIPv4Stack=true
           image: registry.cn-shanghai.aliyuncs.com/ahoo/cosec-gateway:2.0.1
           startupProbe:
             httpGet:
